--- a/src/static/common.pages.css
+++ b/src/static/common.pages.css
@@ -6,3 +6,5 @@ body {
 	margin: auto;
 	margin-bottom: 1rem;
 }
+
+fieldset { border: var(--standard-control-line); }
